<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/australhonduras"
        android:scaleType="centerCrop"
        android:contentDescription="@string/australhonduras"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <TextView
                android:text="@string/australia"
                style="@style/text_view_first" />
            <TextView
                android:id="@+id/australia_goal_score"
                android:text="0"
                style="@style/goal_text_view" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:gravity="center"
                android:text="@string/goal"
                android:onClick="addOneForTeamAustralia"/>
            <TextView
                android:id="@+id/australia_foul"
                android:text="0"
                style="@style/foul_text" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:gravity="center"
                android:text="@string/foul"
                android:onClick="addOneFoulForTeamAustralia"/>
            <TextView
                android:id="@+id/australia_card"
                android:text="0"
                style="@style/card_text" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:gravity="center"
                android:text="@string/penalty_card"
                android:onClick="addOneCardForTeamAustralia"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray">
        </View>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <TextView
                android:text="@string/honduras"
                style="@style/text_view_first" />
            <TextView
                android:id="@+id/honduras_goal_score"
                android:text="0"
                style="@style/goal_text_view"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:text="@string/goal_honduras"
                android:onClick="addOneForTeamHonduras"/>
            <TextView
                android:id="@+id/honduras_foul"
                android:text="0"
                style="@style/foul_text" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:text="@string/foul_honduras"
                android:onClick="addOneFoulForTeamHonduras"/>
            <TextView
                android:id="@+id/honduras_card"
                android:text="0"
                style="@style/card_text" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="@dimen/button_margin_left"
                android:layout_marginRight="@dimen/button_margin_right"
                android:text="@string/penalty_card_honduras"
                android:onClick="addOneCardForTeamHonduras"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"/>
</RelativeLayout>
